namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: digital-krishi-officer
  labels:
    name: digital-krishi-officer
    environment: production
